...
                android:text="@string/staff_id"
                android:textSize="@dimen/font_1"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="346dp" />

            <EditText
                android:id="@+id/editTextStaffID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_photo_camera_black_24dp"
                android:hint="@string/hint_staff_id"
                android:onClick="iconBack"
                android:paddingBottom="20dp"
...
                android:textSize="@dimen/textInput"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="173dp"
                android:imeOptions="actionDone"/>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/bluish"
                android:onClick="login"
                android:padding="@dimen/layout_15"
...
