<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/itemLogout"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:onClick="logOutFunction"
        android:title="@string/log_out"
        app:showAsAction="ifRoom|withText" />
</menu>